--- a/.github/workflows/pass-data1.yml
+++ b/.github/workflows/pass-data1.yml
@@ -11,7 +11,7 @@ jobs:
             - uses: actions/upload-artifact@v4
               with:
                 name: runner
-                path: ./runner.log
+                path: runner.log
     deploy:
         runs-on: ubuntu-latest
         steps:
