--- a/.github/workflows/pass-data1.yml
+++ b/.github/workflows/pass-data1.yml
@@ -13,6 +13,7 @@ jobs:
                 name: runner
                 path: runner.log
     deploy:
+        needs: [build]
         runs-on: ubuntu-latest
         steps:
             - uses: actions/download-artifact@v4
