--- a/.github/workflows/pass-data1.yml
+++ b/.github/workflows/pass-data1.yml
@@ -13,6 +13,7 @@ jobs:
               with:
                 name: runner
                 path: runner.log
+            - run: echo "varMyBuildVersion=1.0" >> $GITHUB_ENV
     deploy:
         needs: [build]
         runs-on: ubuntu-latest
@@ -20,4 +21,5 @@ jobs:
             - uses: actions/download-artifact@v4
               with:
                 name: runner
+            - run: echo "My build version is ${{env.varMyBuildVersion}}" >> runner.log
             - run: cat runner.log
