--- a/.github/workflows/pass-data1.yml
+++ b/.github/workflows/pass-data1.yml
@@ -14,6 +14,7 @@ jobs:
                 name: runner
                 path: runner.log
             - run: echo "varMyBuildVersion=1.0" >> $GITHUB_ENV
+            - run: echo "${{ env.varMyBuildVersion }}"
     deploy:
         needs: [build]
         runs-on: ubuntu-latest
@@ -21,5 +22,5 @@ jobs:
             - uses: actions/download-artifact@v4
               with:
                 name: runner
-            - run: echo "My build version is ${{env.varMyBuildVersion}}" >> runner.log
+            - run: echo "My build version is ${{ env.varMyBuildVersion }}" >> runner.log
             - run: cat runner.log
